--- a/Beneficios.html
+++ b/Beneficios.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="Imagens/notebook.png" />
 
     <link rel="icon" type="image/png" href="Imagens/panejamento.jpg" />
     <title>Gestão estrategia de TI</title>
@@ -21,9 +20,10 @@
 </head>
 
 <body>
+
     <header>
         <nav class="navbarr">
-            <h1 type="text" id="titlee">Gestão estrategia de TI"(↔)"</h1>
+            <h1 type="text" id="titlee">Gestão estrategia de TI</h1>
             <a id="home-Logo" href="index.html">
                 <button id="pinga" class="btnn fourth">HOME</button>
                 <br>
@@ -31,6 +31,7 @@
         </nav>
     </header>
     <br>
+
 <div class="dropdown">
   <button class="dropbtn">Atalhos ☵</button>
   <div class="dropdown-content">
@@ -39,15 +40,15 @@
     <a href="Entrevista Gestor.html" class="btn">Entrevista Gestor</a>
   </div>
 </div>
-
     <div class="container">
         <br>
-
         <h3>Beneficios</h3>
 
         As melhores qualidades e estratégias dentro dessa área são as estratégias de atuação com que se tornem os setores ativos para resolverem dificuldades eventuais, sendo assim trazendo mais dinamismo para as equipes e sempre otimizando a produtividade no dia a dia nas áreas como um todo.
         <a href="https://conteudo.movidesk.com/gestao-estrategica-de-ti/" target="_blank">{ Link Beneficios}</a> 
         <br><br>
+
+        <img style="margin-top: 2rem;" src="/Imagens/panejamento.jpg"> 
     
 </body>
 <script type="text/javascript" src="Porta-BI-Implica.js"></script>
