--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <a href="Beneficios.html" class="btn btn-dark">Conheça os Beneficios</a>
             <a href="Gestao em TI.html" class="btn btn-dark">Gestão em TI</a>
             <a href="Entrevista Gestor.html" class="btn btn-dark">Entrevista Gestor</a>
+            <a href="Pesquisa.Html" class="btn btn-dark">Pesquisa</a>
+            <a href="BIeKM.html" class="btn btn-dark">BI e KM</a>
         </div>
 
     </div>
@@ -84,7 +86,16 @@
                     <a href="Entrevista Gestor.html" class="btn btn-dark ">Entrevista</a>
                 </div>
 
+                <div class="col mb-4">
+                   
+                    <a href="Pesquisa.Html" class="btn btn-dark ">Pesquisa</a>
+                </div>
 
+
+                <div class="col mb-4">
+                   
+                    <a href="BIeKM.html" class="btn btn-dark ">BI e KM</a>
+                </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
